# gdx

./: .anjuta_sym_db.db  .gitignore  .travis.yml  Diagram1.dia  LICENSE  README.md  gdx.doap  meson-post-install.py  meson-post-install.sh  meson-post-install.sh.old  meson.build  org.ampr.ct1enq.gdx.json  org.ampr.ct1enq.gdx.json.test
data/: #main-headerbar.vala#  main-headerbar.ui  main-window.ui  meson.build  org.ampr.ct1enq.gdx.appdata.xml.in  org.ampr.ct1enq.gdx.desktop.in  org.ampr.ct1enq.gdx.gresource.xml  org.ampr.ct1enq.gdx.gschema.xml
data/icons/: export-logo.sh
data/icons/hicolor/: index.xcf  test.xcf
data/icons/hicolor/tmp/: README
data/resources/: clusters_combined.txt  clusters_combined_ve7cc_tested.txt
data/ui/: #preferences.ui#  #spot-window0.ui#  #ttt.glade#  _connection-info-popover.ui  announce-window.ui  app-menu.ui  app-notification.ui  clusters-list.ui  filter-window.ui  filter_window_test.glade  main-menu.ui  main-window.ui  main-window2.ui  preferences.ui  preferences0.ui  settings-window.ui  settings-window2.ui  settings0.ui  settings1.ui  settings2.ui  share-announcement-view.ui  share-spot-view.ui  share-window.ui  site_window.ui  spot-window-listbox.ui  spot-window.ui  spot-window0.ui  spot-window1.ui  ttt.glade
doc/: class_diagram_simple.dia
po/: POTFILES  gdx.pot  pt.po
src/: application.vala  cluster-list-parser  cluster-list-parser2  cluster-list-parser2.vala  connector.vala  dx-spot.vala  gdx-settings.vala  main-headerbar.vala  main-window.vala  main.vala  meson.build  parser-text.vala  parser_text.vala  settings.vala
src/Application/: application.vala
src/Cluster/: band-filter.vala  band-filters.vala  cluster-client.vala  dx-cluster.vala  dx-clusters.vala  dx-spot.vala  frequency.vala  iparsable.vala  parser-console.vala  parser-text.vala  radio-band-filter.vala  radio-band-filters-builder.vala  radio-band-filters.vala  radio-band.vala  radio-frequency.vala
src/Connector/: connector.vala  iconnectable.vala
src/MainWindow/: main-window.vala
src/Parsers/: iparsable.vala  parser-console.vala
src/Settings/: settings.vala
src/ShareAction/: share-action-announcement.vala  share-action-spot.vala  share-action.vala
src/SpotWindow/: spot-window.vala
src/Warehouse/: warehouse.vala
src/Widgets/AppNotification/: app-notification.vala
src/Widgets/FilterWindow/: filter-window.vala
src/Widgets/MainWindow/: main-window.vala
src/Widgets/SettingsWindow/: settings-window.vala
src/Widgets/ShareWindow/: share-announcement-view.vala  share-spot-view.vala  share-window.vala  shareable-view.vala
src/Widgets/SpotWindow/: spot-window.vala
src/ui/MainWindow/: main-window.vala
src/ui/SettingsWindow/: settings-window.vala
src/ui/SpotWindow/: spot-window.vala
tests/: Makefile  cluster-list-parser  cluster-list-parser.vala  cluster-list-parser2  cluster-list-parser3  cluster-list-parser3.vala  cluster-list-parser4.vala  meson.build  test-band-filter.vala  test-cluster-list-parser-async.vala  test-radio-band.vala  test-radio-frequency.vala  test-share-action.vala
tests/band-filter/: meson.build  test-band-filter.vala
tests/cluster-list-parser-async/: meson.build  test-cluster-list-parser-async.vala
tests/dx-spot/: meson.build  test-dx-spot.vala
tests/radio-band/: meson.build  test-radio-band.vala
tests/radio-frequency/: meson.build  test-radio-frequency.vala
tests/share-action/: meson.build  test-share-action.vala
